flux/apps/ai/llm-d-models/models/base/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-base
spec:
  hostnames:
    - llm.nahsi.dev
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: agenticgateway-internal
      namespace: envoy-gateway
      sectionName: https
  rules:
    - backendRefs:
        - group: inference.networking.k8s.io
          kind: InferencePool
          name: inferencepool-base
      matches:
        - path:
            type: PathPrefix
            value: /
          headers:
            - type: Exact
              name: X-Gateway-Base-Model-Name
              value: MODEL_NAME
